Search API 1.x, dev (xxxx-xx-xx):
---------------------------------

Search API 1.3 (2017-07-19):
----------------------------
- #2888584 by drunken monkey: Fixed index description for "cron batch size" of
  -1.
- #2895142 by drunken monkey: Made our test classes more useful for other
  modules.
- #2851436 by Erik Frèrejean, andywhale, beltofte, drunken monkey: Added a
  "Type-specific boosting" processor.
- #2889426 by cspitzlay, drunken monkey: Fixed test fails on Drupal 8.3.
- #2891387 by drunken monkey: Fixed some new code style issues.
- #2891246 by drunken monkey: Fixed error detection in plugin helper.
- #2884451 by drunken monkey: Fixed missing primary key for denormalized index
  tables in DB backend.
- #2886978 by drunken monkey: Fixed tracking of entities in disabled languages.

Search API 1.2 (2017-06-25):
----------------------------
- #2881198 by jzavrl, drunken monkey, borisson_: Added property paths to "Add
  fields" form.
- #2883475 by Matthijs, drunken monkey, borisson_: Added support for "Language
  not applicable".
- #2883807 by LammensJ, drunken monkey: Fixed warning in Views UI for
  contextual filters.
- #2880239 by acbramley, drunken monkey, borisson_: Fixed logic for multiple
  sorts on the same field.
- #2889426 by drunken monkey: Fixed test fails for latest Core changes.
- #2884720 by blake.thompson: Added a display plugin for the Views Embed
  display type.
- #2882347 by mkalkbrenner: Fixed forms to not have unserializable properties.
- #2676468 by acbramley, drunken monkey, borisson_: Fixed stale cache in search
  view with tag-based caching.
- #2876398 by drunken monkey: Fixed operator description of Views "Fulltext
  search" filter.
- #2881945 by drunken monkey: Removed unnecessary check in
  AddURL::addFieldValues().
- #2886981 by drunken monkey: Fixed test fails for latest Core changes.
- #2880026 by Anton4yk, drunken monkey: Fixed bugs in entity datasource's item
  discovery code for edge cases.