@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2665476 by ericgsmith, drunken monkey: Fixed paging in cached views.
 
 Search API 1.3 (2017-07-19):
 ----------------------------
